@@ -21,6 +21,7 @@ import com.starrocks.server.WarehouseManager;
 import com.starrocks.thrift.TExplainLevel;
 import com.starrocks.thrift.TFetchNode;
 import com.starrocks.thrift.TNodesInfo;
+import com.starrocks.thrift.TNormalPlanNode;
 import com.starrocks.thrift.TPlanNode;
 import com.starrocks.thrift.TPlanNodeType;
 import com.starrocks.warehouse.cngroup.ComputeResource;
@@ -40,7 +41,7 @@ public class FetchNode extends PlanNode {
     List<TupleDescriptor> descs;
     // row position desc for each table
     Map<TupleId, RowPositionDescriptor> rowPosDescs;
-    private ComputeResource computeResource = WarehouseManager.DEFAULT_RESOURCE;
+    private ComputeResource computeResource;
 
     public FetchNode(PlanNodeId id, PlanNode inputNode,
                      PlanNodeId targetNodeId, List<TupleDescriptor> descs,
@@ -49,9 +50,31 @@ public class FetchNode extends PlanNode {
         addChild(inputNode);
         this.targetNodeId = targetNodeId;
         this.descs = descs;
-        this.tupleIds.addAll(descs.stream().map(tupleDescriptor -> tupleDescriptor.getId()).collect(Collectors.toList()));
+        this.tupleIds.addAll(descs.stream().map(TupleDescriptor::getId).toList());
         this.rowPosDescs = rowPosDescs;
         this.computeResource = computeResource;
+    }
+
+    public PlanNodeId getTargetNodeId() {
+        return targetNodeId;
+    }
+
+    @Override
+    protected void toNormalForm(TNormalPlanNode planNode, FragmentNormalizer normalizer) {
+        // Global late materialization defers the wide columns to a lookup fragment that
+        // PlanFragmentBuilder moves into preExecutedFragments. That fragment is not a child of
+        // this node -- it is referenced by node id alone -- so normalizeSubTree() never reaches
+        // it, and neither the columns it fetches nor its own scan and predicates can enter the
+        // digest. The scan below here reads only row positions, identically whichever column the
+        // query ultimately wants, so nothing else distinguishes two plans that defer different
+        // columns either: they would share a cache key and the first to run would decide the
+        // second's answer.
+        //
+        // Normalizing this node alone would not be enough -- the lookup fragment would still be
+        // invisible -- so the fragment is marked uncacheable instead. Late materialization is a
+        // performance optimization, so the cost is losing the cache for these plans, not a wrong
+        // answer.
+        normalizer.setUncacheable(true);
     }
 
     @Override
@@ -63,6 +86,7 @@ public class FetchNode extends PlanNode {
         rowPosDescs.forEach((tupleId, rowPosDescs) -> {
             msg.fetch_node.row_pos_descs.put(tupleId.asInt(), rowPosDescs.toThrift());
         });
+        // TODO: only send necessary info to BE, such as host and port, and remove unnecessary info such as node id and node name
         msg.fetch_node.nodes_info = GlobalStateMgr.getCurrentState().createNodesInfo(computeResource,
                 GlobalStateMgr.getCurrentState().getNodeMgr().getClusterInfo());
     }
